Some fix to comments

--- a/css/src/custom.css
+++ b/css/src/custom.css
@@ -2135,7 +2135,9 @@ ol ol {
 }
 
 /* line 167, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_type.scss */
-.list-unstyled {
+.list-unstyled, .comments-area ul.parent,
+.comments-area ol.parent, .comments-area ul.children,
+.comments-area ol.children {
   padding-left: 0;
   list-style: none;
 }
@@ -3466,6 +3468,277 @@ pre code {
     margin-left: 100%;
   }
 }
+/* line 6, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+table {
+  background-color: transparent;
+}
+
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+caption {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  color: #777777;
+  text-align: left;
+}
+
+/* line 15, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+th {
+  text-align: left;
+}
+
+/* line 22, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 22px;
+}
+/* line 31, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table > thead > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > th,
+.table > tbody > tr > td,
+.table > tfoot > tr > th,
+.table > tfoot > tr > td {
+  padding: 8px;
+  line-height: 1.42857;
+  vertical-align: top;
+  border-top: 1px solid #ddd;
+}
+/* line 41, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table > thead > tr > th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #ddd;
+}
+/* line 50, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table > caption + thead > tr:first-child > th,
+.table > caption + thead > tr:first-child > td,
+.table > colgroup + thead > tr:first-child > th,
+.table > colgroup + thead > tr:first-child > td,
+.table > thead:first-child > tr:first-child > th,
+.table > thead:first-child > tr:first-child > td {
+  border-top: 0;
+}
+/* line 57, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table > tbody + tbody {
+  border-top: 2px solid #ddd;
+}
+/* line 62, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table .table {
+  background-color: #fff;
+}
+
+/* line 75, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-condensed > thead > tr > th,
+.table-condensed > thead > tr > td,
+.table-condensed > tbody > tr > th,
+.table-condensed > tbody > tr > td,
+.table-condensed > tfoot > tr > th,
+.table-condensed > tfoot > tr > td {
+  padding: 5px;
+}
+
+/* line 88, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-bordered {
+  border: 1px solid #ddd;
+}
+/* line 94, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-bordered > thead > tr > th,
+.table-bordered > thead > tr > td,
+.table-bordered > tbody > tr > th,
+.table-bordered > tbody > tr > td,
+.table-bordered > tfoot > tr > th,
+.table-bordered > tfoot > tr > td {
+  border: 1px solid #ddd;
+}
+/* line 101, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-bordered > thead > tr > th,
+.table-bordered > thead > tr > td {
+  border-bottom-width: 2px;
+}
+
+/* line 114, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: #f9f9f9;
+}
+
+/* line 125, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-hover > tbody > tr:hover {
+  background-color: #f5f5f5;
+}
+
+/* line 135, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+table col[class*="col-"] {
+  position: static;
+  float: none;
+  display: table-column;
+}
+
+/* line 143, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+table td[class*="col-"],
+table th[class*="col-"] {
+  position: static;
+  float: none;
+  display: table-cell;
+}
+
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table > thead > tr > td.active,
+.table > thead > tr > th.active, .table > thead > tr.active > td, .table > thead > tr.active > th,
+.table > tbody > tr > td.active,
+.table > tbody > tr > th.active,
+.table > tbody > tr.active > td,
+.table > tbody > tr.active > th,
+.table > tfoot > tr > td.active,
+.table > tfoot > tr > th.active,
+.table > tfoot > tr.active > td,
+.table > tfoot > tr.active > th {
+  background-color: #f5f5f5;
+}
+
+/* line 20, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table-hover > tbody > tr > td.active:hover,
+.table-hover > tbody > tr > th.active:hover, .table-hover > tbody > tr.active:hover > td, .table-hover > tbody > tr:hover > .active, .table-hover > tbody > tr.active:hover > th {
+  background-color: #e8e8e8;
+}
+
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table > thead > tr > td.success,
+.table > thead > tr > th.success, .table > thead > tr.success > td, .table > thead > tr.success > th,
+.table > tbody > tr > td.success,
+.table > tbody > tr > th.success,
+.table > tbody > tr.success > td,
+.table > tbody > tr.success > th,
+.table > tfoot > tr > td.success,
+.table > tfoot > tr > th.success,
+.table > tfoot > tr.success > td,
+.table > tfoot > tr.success > th {
+  background-color: #dff0d8;
+}
+
+/* line 20, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table-hover > tbody > tr > td.success:hover,
+.table-hover > tbody > tr > th.success:hover, .table-hover > tbody > tr.success:hover > td, .table-hover > tbody > tr:hover > .success, .table-hover > tbody > tr.success:hover > th {
+  background-color: #d0e9c6;
+}
+
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table > thead > tr > td.info,
+.table > thead > tr > th.info, .table > thead > tr.info > td, .table > thead > tr.info > th,
+.table > tbody > tr > td.info,
+.table > tbody > tr > th.info,
+.table > tbody > tr.info > td,
+.table > tbody > tr.info > th,
+.table > tfoot > tr > td.info,
+.table > tfoot > tr > th.info,
+.table > tfoot > tr.info > td,
+.table > tfoot > tr.info > th {
+  background-color: #d9edf7;
+}
+
+/* line 20, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table-hover > tbody > tr > td.info:hover,
+.table-hover > tbody > tr > th.info:hover, .table-hover > tbody > tr.info:hover > td, .table-hover > tbody > tr:hover > .info, .table-hover > tbody > tr.info:hover > th {
+  background-color: #c4e3f3;
+}
+
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table > thead > tr > td.warning,
+.table > thead > tr > th.warning, .table > thead > tr.warning > td, .table > thead > tr.warning > th,
+.table > tbody > tr > td.warning,
+.table > tbody > tr > th.warning,
+.table > tbody > tr.warning > td,
+.table > tbody > tr.warning > th,
+.table > tfoot > tr > td.warning,
+.table > tfoot > tr > th.warning,
+.table > tfoot > tr.warning > td,
+.table > tfoot > tr.warning > th {
+  background-color: #fcf8e3;
+}
+
+/* line 20, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table-hover > tbody > tr > td.warning:hover,
+.table-hover > tbody > tr > th.warning:hover, .table-hover > tbody > tr.warning:hover > td, .table-hover > tbody > tr:hover > .warning, .table-hover > tbody > tr.warning:hover > th {
+  background-color: #faf2cc;
+}
+
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table > thead > tr > td.danger,
+.table > thead > tr > th.danger, .table > thead > tr.danger > td, .table > thead > tr.danger > th,
+.table > tbody > tr > td.danger,
+.table > tbody > tr > th.danger,
+.table > tbody > tr.danger > td,
+.table > tbody > tr.danger > th,
+.table > tfoot > tr > td.danger,
+.table > tfoot > tr > th.danger,
+.table > tfoot > tr.danger > td,
+.table > tfoot > tr.danger > th {
+  background-color: #f2dede;
+}
+
+/* line 20, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_table-row.scss */
+.table-hover > tbody > tr > td.danger:hover,
+.table-hover > tbody > tr > th.danger:hover, .table-hover > tbody > tr.danger:hover > td, .table-hover > tbody > tr:hover > .danger, .table-hover > tbody > tr.danger:hover > th {
+  background-color: #ebcccc;
+}
+
+/* line 171, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+.table-responsive {
+  overflow-x: auto;
+  min-height: 0.01%;
+}
+@media screen and (max-width: 767px) {
+  /* line 171, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive {
+    width: 100%;
+    margin-bottom: 16.5px;
+    overflow-y: hidden;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+  }
+  /* line 183, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive > .table {
+    margin-bottom: 0;
+  }
+  /* line 191, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive > .table > thead > tr > th,
+  .table-responsive > .table > thead > tr > td,
+  .table-responsive > .table > tbody > tr > th,
+  .table-responsive > .table > tbody > tr > td,
+  .table-responsive > .table > tfoot > tr > th,
+  .table-responsive > .table > tfoot > tr > td {
+    white-space: nowrap;
+  }
+  /* line 200, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive > .table-bordered {
+    border: 0;
+  }
+  /* line 208, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive > .table-bordered > thead > tr > th:first-child,
+  .table-responsive > .table-bordered > thead > tr > td:first-child,
+  .table-responsive > .table-bordered > tbody > tr > th:first-child,
+  .table-responsive > .table-bordered > tbody > tr > td:first-child,
+  .table-responsive > .table-bordered > tfoot > tr > th:first-child,
+  .table-responsive > .table-bordered > tfoot > tr > td:first-child {
+    border-left: 0;
+  }
+  /* line 212, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive > .table-bordered > thead > tr > th:last-child,
+  .table-responsive > .table-bordered > thead > tr > td:last-child,
+  .table-responsive > .table-bordered > tbody > tr > th:last-child,
+  .table-responsive > .table-bordered > tbody > tr > td:last-child,
+  .table-responsive > .table-bordered > tfoot > tr > th:last-child,
+  .table-responsive > .table-bordered > tfoot > tr > td:last-child {
+    border-right: 0;
+  }
+  /* line 225, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_tables.scss */
+  .table-responsive > .table-bordered > tbody > tr:last-child > th,
+  .table-responsive > .table-bordered > tbody > tr:last-child > td,
+  .table-responsive > .table-bordered > tfoot > tr:last-child > th,
+  .table-responsive > .table-bordered > tfoot > tr:last-child > td {
+    border-bottom: 0;
+  }
+}
+
 /* line 10, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss */
 fieldset {
   padding: 0;
@@ -6137,6 +6410,106 @@ a.thumbnail.active {
   border-color: #337ab7;
 }
 
+/* line 9, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert {
+  padding: 15px;
+  margin-bottom: 22px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+/* line 16, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert h4 {
+  margin-top: 0;
+  color: inherit;
+}
+/* line 23, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert .alert-link {
+  font-weight: bold;
+}
+/* line 28, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert > p,
+.alert > ul {
+  margin-bottom: 0;
+}
+/* line 33, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert > p + p {
+  margin-top: 5px;
+}
+
+/* line 42, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert-dismissable,
+.alert-dismissible {
+  padding-right: 35px;
+}
+/* line 47, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert-dismissable .close,
+.alert-dismissible .close {
+  position: relative;
+  top: -2px;
+  right: -21px;
+  color: inherit;
+}
+
+/* line 59, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #3c763d;
+}
+/* line 8, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-success hr {
+  border-top-color: #c9e2b3;
+}
+/* line 11, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-success .alert-link {
+  color: #2b542c;
+}
+
+/* line 63, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert-info {
+  background-color: #d9edf7;
+  border-color: #bce8f1;
+  color: #31708f;
+}
+/* line 8, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-info hr {
+  border-top-color: #a6e1ec;
+}
+/* line 11, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-info .alert-link {
+  color: #245269;
+}
+
+/* line 67, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert-warning {
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+  color: #8a6d3b;
+}
+/* line 8, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-warning hr {
+  border-top-color: #f7e1b5;
+}
+/* line 11, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-warning .alert-link {
+  color: #66512c;
+}
+
+/* line 71, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_alerts.scss */
+.alert-danger {
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  color: #a94442;
+}
+/* line 8, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-danger hr {
+  border-top-color: #e4b9c0;
+}
+/* line 11, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_alerts.scss */
+.alert-danger .alert-link {
+  color: #843534;
+}
+
 /* line 1, ../../bower/bootstrap-sass/assets/stylesheets/bootstrap/_media.scss */
 .media {
   margin-top: 15px;
@@ -6881,11 +7254,6 @@ a img.alignleft {
   padding-left: 0;
 }
 
-/* line 5, ../../sass/global/_fix.scss */
-.comment-edit-link, .comment-reply-link, .btn-primary a, .post-password-form input[type="submit"] a {
-  color: #FFFFFF !important;
-}
-
 /* line 10, ../../sass/global/_fix.scss */
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, a, p, li {
   -ms-word-wrap: break-word;
@@ -7183,15 +7551,68 @@ a img.dropdown-submenu.alignleft > .dropdown-menu {
   background-position: -204px 0 !important;
 }
 
+/* line 10, ../../sass/comments/_comments-area.scss */
+.comments-area ul .comment,
+.comments-area ol .comment {
+  margin-top: calc(2 * 1rem);
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-2 {
+  margin-left: 4rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-3 {
+  margin-left: 6rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-4 {
+  margin-left: 8rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-5 {
+  margin-left: 10rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-6 {
+  margin-left: 12rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-7 {
+  margin-left: 14rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-8 {
+  margin-left: 16rem;
+}
+
+/* line 17, ../../sass/comments/_comments-area.scss */
+.depth-9 {
+  margin-left: 18rem;
+}
+
 /*Stile per la form dei commenti*/
 /**
  * Snippet example for widget:
  */
-/* line 6, ../../sass/wordpress/_password_form.scss */
+/**
+ * Visualized in singular page
+ */
+/* line 9, ../../sass/wordpress/_password_form.scss */
 .post-password-form input[type="submit"] {
   margin-bottom: 5px;
 }
 
+/**
+ * Visualized on singular|archive|home page
+ * <article class="..."
+ */
 /* line 1, ../../sass/wordpress/_wordpressCss.scss */
 #wp-calendar {
   width: 100%;
