--- a/style.css
+++ b/style.css
@@ -3,14 +3,14 @@
  * Theme URI: //italystrap.com
  * Author: Enea Overclokk
  * Author URI: //www.overclokk.net
- * Description: Theme Framework for WordPress with twitter Bootstrap, HTML5 boilerplate and Schema.org <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
+ * Description: Theme Framework for WordPress built with modern code <a href="https://github.com/overclokk/ItalyStrap/graphs/contributors">Contribute on GitHub</a>
  * Version: 4.0.0-beta.6
  * License: GPLv2 or later
  * License URI: //www.gnu.org/licenses/gpl-2.0.html
  * Tags: right-sidebar, featured-images, full-width-template, two-columns, three-columns, one-column, right-sidebar, left-sidebar, footer-widgets, blog, flexible-header, full-width-template, custom-header, custom-background, custom-menu, custom-colors, sticky-post, threaded-comments, translation-ready, featured-images, theme-options
  * Text Domain: italystrap
- * Requires at least: 5.0
- * Tested up to: 5.1
+ * Requires at least: 5.2
+ * Tested up to: 5.3
  * GitHub Theme URI: https://github.com/ItalyStrap/italystrap
  * GitHub Branch: master
  */
