--- a/assets/sass/global/_margin.scss
+++ b/assets/sass/global/_margin.scss
@@ -1,15 +1,15 @@
-.margin-top-xs{
-	margin-top: $general_margin;
-}
-.margin-top-sm{
-	margin-top: $general_margin * 2;
-}
-.margin-top-md{
-	margin-top: $general_margin * 3;
-}
-.margin-top-lg{
-	margin-top: $general_margin * 4;
-}
+//.margin-top-xs{
+//	margin-top: $general_margin;
+//}
+//.margin-top-sm{
+//	margin-top: $general_margin * 2;
+//}
+//.margin-top-md{
+//	margin-top: $general_margin * 3;
+//}
+//.margin-top-lg{
+//	margin-top: $general_margin * 4;
+//}
 
 
 
