--- a/assets/sass/wordpress/_password_form.scss
+++ b/assets/sass/wordpress/_password_form.scss
@@ -2,7 +2,8 @@
  * Visualized in singular page
  */
 .post-password-form {
-  @extend .form-group;
+  //@extend .form-control;
+  //@extend .form-group;
   input[type="password"] {
     @extend .form-control;
   }
