--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -1,73 +1,34 @@
-@import "compass";
 @import "variable";
 
-///
-/// Importo tutti i file Bootstrap così posso ottimizzare meglio i css
-/// 
+//@import "bt3";
+@import "bt5";
 
-// @import "../bower/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "compass";
+@import "compass/css3";
+@import "compass/utilities";
+@import "../../bower/susy/sass/susy";
+@import "../../bower/sassy-maps/sass/memo";
+@import "../../bower/breakpoint-sass/stylesheets/breakpoint";
 
-// Core variables and mixins
-@import "bootstrap/variables";
-@import "bootstrap/mixins";
-
-// Reset and dependencies
-@import "bootstrap/normalize";
-@import "bootstrap/print";
-@import "bootstrap/glyphicons";
-
-// Core CSS
-@import "bootstrap/scaffolding";
-@import "bootstrap/type";
-@import "bootstrap/code";
-@import "bootstrap/grid";
-@import "bootstrap/tables";
-@import "bootstrap/forms";
-@import "bootstrap/buttons";
-
-// Components
-@import "bootstrap/component-animations";
-@import "bootstrap/dropdowns";
-// @import "bootstrap/button-groups";
-@import "bootstrap/input-groups";
-@import "bootstrap/navs";
-@import "bootstrap/navbar";
-@import "bootstrap/breadcrumbs";
-@import "bootstrap/pagination";
-@import "bootstrap/pager";
-@import "bootstrap/labels";
-@import "bootstrap/badges";
-// @import "bootstrap/jumbotron";
-@import "bootstrap/thumbnails";
-@import "bootstrap/alerts";
-// @import "bootstrap/progress-bars";
-@import "bootstrap/media";
-// @import "bootstrap/list-group";
-// @import "bootstrap/panels";
-@import "bootstrap/responsive-embed";
-// @import "bootstrap/wells";
-// @import "bootstrap/close";
-
-// Components w/ JavaScript
-// @import "bootstrap/modals";
-// @import "bootstrap/tooltip";
-// @import "bootstrap/popovers";
-@import "bootstrap/carousel";
-
-// Utility classes
-@import "bootstrap/utilities";
-@import "bootstrap/responsive-utilities";
+$susy: (
+  columns: 12,
+  container: auto,
+  // gutters: .25,
+  gutters: .50,
+  // gutter-position: inside,
+  gutter-position: split,
+);
 
 ///
 /// Da qui comincia lo stile custom
 /// 
-@import "mixins/_index";
-@import "global/_index";
-@import "header/_index";
-@import "navigations/_index";
-@import "content/_index";
-@import "meta/_index";
-@import "comments/_index";
-@import "sidebar/_index";
-@import "footer/_index";
-@import "wordpress/_index";
+//@import "mixins/_index";
+//@import "global/_index";
+//@import "header/_index";
+//@import "navigations/_index";
+//@import "content/_index";
+//@import "meta/_index";
+//@import "comments/_index";
+//@import "sidebar/_index";
+//@import "footer/_index";
+//@import "wordpress/_index";
