--- a/assets/sass/global/_fix.scss
+++ b/assets/sass/global/_fix.scss
@@ -16,8 +16,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, a, p, li {
 .wp-post-image,
 .wp-block-image // <- Gutenberg
 {
-	@include img-responsive();
+	//@include img-responsive();
+	@include img-fluid();
 	> img {
-		@include img-responsive();
+		@include img-fluid();
 	}
 }
