--- a/assets/sass/global/_new-class.scss
+++ b/assets/sass/global/_new-class.scss
@@ -8,13 +8,25 @@
 .boxed {
 	margin-left: auto;
 	margin-right: auto;
-	@include breakpoint( $screen-sm-min ) {
-		width: $container-sm;
-	}
-	@include breakpoint( $screen-md-min ) {
-		width: $container-md;
-	}
-	@include breakpoint( $screen-lg-min ) {
-		width: $container-lg;
-	}
+	@include is-make-container( $spacer * 3 );
+
+
+	//@include breakpoint( $screen-sm-min ) {
+	//	width: $container-sm;
+	//}
+	//@include breakpoint( $screen-md-min ) {
+	//	width: $container-md;
+	//}
+	//@include breakpoint( $screen-lg-min ) {
+	//	width: $container-lg;
+	//}
+	//@include media-breakpoint-up( $grid-breakpoints(sm) ) {
+	//	width: $grid-breakpoints(sm);
+	//}
+	//@include breakpoint( $screen-md-min ) {
+	//	width: $container-md;
+	//}
+	//@include breakpoint( $screen-lg-min ) {
+	//	width: $container-lg;
+	//}
 }
