--- a/assets/sass/editor-style.scss
+++ b/assets/sass/editor-style.scss
@@ -179,3 +179,21 @@ $wp_border_color: #e5e5e5;
 //.components-notice-list {
 //	display: none;
 //}
+
+
+/**
+ * Custom
+ */
+.editor-post-title__block {
+	border: 1px solid #e9e9e9;
+}
+.editor-post-title__block .is-selected {
+	border: 1px solid #a0a0a0;
+}
+
+.wp-block {
+	border: 1px solid #e9e9e9;
+}
+.is-selected {
+	border: 1px solid #a0a0a0 !important;
+}
