--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -4,8 +4,7 @@
 
 //$spacer: 1rem !default;
 
-//$icon-font-path: '../fonts/';
-$icon-font-path: '../../fonts/';
+$icon-font-path: '../fonts/';
 
 // Riga 52
 //$font-size-base:          1.05rem;
