--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -1,7 +1,7 @@
-@import "variable";
+@import "variables";
 
-@import "bt3";
-//@import "bt5";
+@import "vendors/bt3";
+//@import "vendors/bt5";
 
 @import "compass";
 @import "compass/css3";
