--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -10,5 +10,11 @@ $icon-font-path: '../fonts/';
 //$font-size-base:          1.05rem;
 $font-size-base:          18px;
 
+//$gallery-caption-color: $gray-300;
+$gallery-caption-color: #999;
+
 // Tutte le aggiunte ulteriori a bootstrap
 //$general_margin: $font-size-base * 2; // 36px
+
+$navbar-height: 80px;
+$navbar-margin-bottom: 0;
