--- a/assets/sass/content/_gallery.scss
+++ b/assets/sass/content/_gallery.scss
@@ -20,8 +20,7 @@
         padding: 0.5em;
     }
     .gallery-caption {
-        //color: $gray-light;
-        color: $gray-300;
+        color: $gallery-caption-color;
         font-size: 0.85em;
     }
     .gallery-icon,
