--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -26,7 +26,7 @@ $susy: (
 //@import "global/_index";
 //@import "header/_index";
 //@import "navigations/_index";
-//@import "content/_index";
+@import "content/_index";
 //@import "meta/_index";
 //@import "comments/_index";
 //@import "sidebar/_index";
